fix(images): fix some full-width images from overflowing

--- a/src/features/courses/images/maxWidth.scss
+++ b/src/features/courses/images/maxWidth.scss
@@ -1,4 +1,4 @@
 // prevent images from overflowing
-#region-main img:not(.activityicon):not(.icon) {
+#region-main img:not(.activityicon):not(.icon):not(.img-fluid) {
     max-width: 100%;
 }
